[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Still.Right.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Still.Back.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Left_1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Still.Left.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Left_2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Right_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Right_2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Back_1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Back_2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Still.Front.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Front_1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Dave Sprites/Dave.Walking.Front_2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Dave Sprites/Dave UI Sprites/UI.Dave.HealthbarMini.Border.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Dave Sprites/Dave UI Sprites/UI.Dave.HealthbarMini.Fill.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Dave Sprites/Dave UI Sprites/UI.Dave.StaminaBarMini.Border.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Dave Sprites/Dave UI Sprites/UI.Dave.StaminaBarMini.Fill.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Standing_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Standing_Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walking_Left",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walking_Right",
"speed": 6.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Standing_Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walking_Up",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Standing_Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "Walking_Down",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.15716, 10 )

[node name="Player" type="KinematicBody2D"]

position = Vector2( 131.671, 71.1668 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Walking_Up"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.115982, 0.927856 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing" ]

[node name="PlayerHealthUI" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="HealthBar" type="TextureProgress" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = -9.0
margin_right = 32.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
texture_under = ExtResource( 14 )
texture_over = null
texture_progress = ExtResource( 15 )
fill_mode = 3
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="FatigueBar" type="TextureProgress" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = -2.0
margin_right = 24.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = ExtResource( 16 )
texture_over = null
texture_progress = ExtResource( 17 )
fill_mode = 3
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="ViewStatusTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="timeout" from="ViewStatusTimer" to="." method="_on_ViewStatusTimer_timeout"]


